<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ECS</string>
    <string name="hello_world">Hello world!</string>

    <!-- Menu String Start -->

    <string name="action_settings">Settings</string>
    <string name="action_addemployee">Add</string>
    <!-- Menu String End -->


    <!-- Employee Screen String Start -->

    <string name="editText_empName_hint">Enter Your Name</string>
    <string name="editText_empEmail_hint">Enter Your Email</string>
    <string name="editText_empPhone_hint">Enter Your Phone</string>
    <string name="editText_empAddress_hint">Enter Your Address</string>
    <string name="radio_Male">Male</string>
    <string name="radio_Female">Female</string>
    <string name="btn_submit">Register</string>

    <!-- Employee Screen String End -->


    <!-- Home Screen Employee String Start -->
    <string name="empty_employee_text">No Employee records Found!</string>
    <!-- Home Screen Employee Staring End -->

    <string name="title_activity_employee_detail">EmployeeDetailActivity</string>

</resources>